Fix spacing between message groups

--- a/src/components/ChatView/ChatView.css
+++ b/src/components/ChatView/ChatView.css
@@ -58,6 +58,10 @@
 	overflow-y: auto;
 }
 
+.last-msg {
+	margin-bottom: 20px;
+}
+
 .message-container {
 	width: calc(100% - 60px);
 	display: flex;
